--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile 'commons-validator:commons-validator:1.4.1'
 	compileOnly 'org.projectlombok:lombok:1.16.20'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.46'
+	compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 }
