--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   datasource:
     url: "jdbc:mysql://127.0.0.1:3306/babycentral?useSSL=false"
-    username: ${BABY_CENTRAL_DB_USER}
+    username: ${BABY_CENTRAL_DB_USER:root}
     password: ${BABY_CENTRAL_DB_PASSWORD}
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 
