--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     username: root
     password: root
 #    driver-class-name: com.mysql.cj.jdbc.Driver
+  servlet:
+    multipart:
+      maxFileSize: 5MB
 
 server:
   port: 9001
